# freepik_backend_challenge

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  benchmark.html  entrypoint.sh  plot_response_time.p  pyproject.toml
docs/i2/: batch_times.csv
docs/i4/: batch_times.csv
docs/i5/: batch_times.csv
scripts/: batch_performance.py  encode_image.py  gpu_batch_cpu_sequential_performance.py  gpu_batch_multi_cpu_performance.py
src/image_captions/: app.py  baseline_app.py
src/image_captions/best/: app.py  handler.py  inference.py
src/image_captions/inference/: app.py  handler.py  inference.py
tests/: conftest.py  test_best_app.py  test_model.py
tests/inference/: test_inference_api.py
