[tool.poetry]
name = "image_captions"
version = "0.1.0"
description = ""
authors = ["Pablo Campillo <dev@pablocampillo.pro>"]
readme = "README.md"
packages = [{include = "image_captions", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
